service-a/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: my-services
spec:
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 30001
  type: NodePort  # Change to LoadBalancer or NodePort if needed
